# TheBigStitchMeshingRework

./: CMakeLists.txt  common.cpp  common.h  main.cpp  viewer_related.cpp  viewer_related.h
